syntax = "proto3";
package proto;
option go_package = ".;pb";
message MoveTel {
    double x = 1;
    double y = 2;
}
message MoveMsg {
    double x = 1;
    double y = 2;
}

message EnterRoomReq{
    int64 roomId = 1;
}