syntax = "proto3";
option go_package = "pb";
package proto;
import "common.proto";
import "fightgame.proto";
// 默认功能消息 10000 以下
// 业务消息：
// 1xxxx req 请求消息需要返回消息
// 2xxxx tel 请求消息不需要返回消息
// 3xxxx push 推送消息

message Message {
    int64 seq = 1; // 消息序列号
    int32 msgNo = 2; // 消息编号
    repeated int64 broadcastUid = 3; // 需要收到广播的玩家
    bytes body = 4;
    int64 uid = 5;
}
